@@ -1,3 +1,14 @@
+2011-06-28  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r89968.
+        http://trac.webkit.org/changeset/89968
+        https://bugs.webkit.org/show_bug.cgi?id=63581
+
+        Broke chromium windows compile (Requested by jamesr on
+        #webkit).
+
+        * wtf/Platform.h:
+
 2011-06-28  Oliver Hunt  <oliver@apple.com>
 
         Reviewed by Gavin Barraclough.
